# reram-synthesis

./: README.md
hybrid-synthesis/: CMakeLists.txt  README.md
hybrid-synthesis/include/: farm.h  map.h  noc.h  pipe.h  primitive.h  reduce.h  skeleton.h  xbar.h
hybrid-synthesis/source/: pipe.cpp
hybrid-synthesis/src/: farm.cpp  map.cpp  pipe.cpp  primitive.cpp  reduce.cpp  skeleton.cpp  xbar.cpp
hybrid-synthesis/unittest/: CMakeLists.txt
hybrid-synthesis/unittest/dotprod/: CMakeLists.txt  main.cpp
hybrid-synthesis/unittest/img-conv/: CMakeLists.txt  main.cpp
hybrid-synthesis/unittest/sha3/: CMakeLists.txt  main.cpp
